2011-07-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/lastlog.c: Add annotations to indicate that usage() does not
	return.

2011-07-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/faillog.c: Add annotations to indicate that usage() does not
	return.
	* src/faillog.c: Fix message: this is faillog, not lastlog.
	* src/faillog.c: Check that there are no extra arguments after
	parsing the options.

2011-07-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chgpasswd.c: Add annotations to indicate that usage() does
	not return.
	* src/chgpasswd.c: Split usage in smaller parts. Those parts are
	already translated for chpasswd. Usage is now closer to
	chpasswd's.
	* src/chgpasswd.c: Remove dead code. No need to set crypt_method
	to NULL when it is already NULL. sflg is only set if crypt_method
	is not NULL.

2011-07-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/expiry.c: Remove dead code.
	* src/expiry.c: Improve comments.

2011-07-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpck.c: Added comments.
	* src/grpck.c: Avoid implicit conversion of pointer to boolean.
	* src/grpck.c: Remove dead code. argc cannot be lower than optind.
	Avoid checking twice in a row for NULL != list[i].

2011-07-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/find_new_gid.c, libmisc/find_new_uid.c: Fail in case of
	invalid configuration. 
	* libmisc/find_new_gid.c, libmisc/find_new_uid.c: Updated
	comments.
	* libmisc/find_new_gid.c, libmisc/find_new_uid.c: Be more strict
	on the loop stop conditions. Stop if we passed the limit, even if
	the limit itself was never noticed.

2011-07-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Fix some spacing issues due to configuration
	variants.

2011-07-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Overflow when computing the number of days based
	on the scaling. Use of long long needed.
