@@ -1,5 +1,14 @@
 2011-07-23  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/chpasswd.c: Add annotations to indicate that usage() does
+	not return.
+	* src/chpasswd.c: Reindent.
+	* src/chpasswd.c: Remove dead code. No need to set crypt_method
+	to NULL when it is already NULL. sflg is only set if crypt_method
+	is not NULL.
+
+2011-07-23  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/lastlog.c: Add annotations to indicate that usage() does not
 	return.
 
